autopilot(add-authoritative-attacks-api): Add authoritative Attacks APIs
